apps/headlamp/route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forward-auth
  namespace: headlamp
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/
    trustForwardHeader: true
    maxResponseBodySize: 1048576
    addAuthCookiesToResponse:
      - _cloudlab_oauth2_proxy
    authResponseHeaders:
      - Authorization
      - X-Auth-Request-Access-Token
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-User
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: headlamp
  hostnames:
    - headlamp.kakatkarakshay.dev
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-forward-auth
      backendRefs:
        - name: headlamp
          port: 80
